<resources>
    <string name="app_name">chat-android-app</string>
    <string name="lblIniciarSesion">Iniciar Sesión</string>
    <string name="lblDesc">Inicie sesión para poder continuar</string>
    <string name="txtUserName">Nombre de usuario</string>
    <string name="txtPassword">Contraseña</string>
    <string name="btnLogin">Iniciar Sesión</string>
    <string name="btnGoogle">Continuar con Google</string>
    <string name="lblOr">- o -</string>
    <string name="lblNuevaCuenta">Nueva Cuenta</string>
    <string name="lblDescReg">Regístrate para poder continuar</string>
    <string name="txtEmail">Correo electrónico</string>
    <string name="btnRegister">Registrarse</string>
    <string name="txtRegLog">¿No tienes cuenta? Regístrate</string>
    <string name="txtName">Nombre completo</string>
    <string name="txtToolbarTitle">Chats recientes</string>
    <string name="txtToolbarUsersTitle">Usuarios</string>
    <string name="txtUsuariosNoReg">No se encontraron usuarios registrados</string>
    <string name="lblUserName">Nombre</string>
    <string name="txtLastMessage">Ultimo mensaje...</string>
    <string name="lblUserEmail">email@email.com</string>
    <string name="lblCerrarSesion">Cerrar Sesión</string>
    <string name="lblEditarPerfil">Editar perfil</string>
    <string name="txtToolbarTitleProfile">Editar perfil</string>
    <string name="lblProfileEdit">Editar perfil</string>
    <string name="lblProfileEditDesc">Actualiza tu información personal</string>
    <string name="txtBtnEdit"> Guardar cambios</string>
</resources>