<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/google_background"
    tools:context=".ui.auth.LoginActivity">

  <TextView
      android:id="@+id/lblNuevaCuenta"
      android:layout_width="0dp"
      android:layout_height="52dp"
      android:layout_marginStart="30dp"
      android:layout_marginTop="10dp"
      android:fontFamily="@font/poppins_semibold"
      android:text="@string/lblIniciarSesion"
      android:textColor="@color/primary"
      android:textSize="40sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imgHeader" />

  <TextView
      android:id="@+id/lblDescReg"
      android:layout_width="0dp"
      android:layout_height="22dp"
      android:layout_marginStart="30dp"
      android:layout_marginTop="5dp"
      android:fontFamily="@font/poppins_medium"
      android:text="@string/lblDesc"
      android:textColor="@color/primary"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/lblNuevaCuenta" />

  <EditText
      android:id="@+id/txtUserName"
      android:layout_width="0dp"
      android:layout_height="48dp"
      android:layout_marginStart="30dp"
      android:layout_marginTop="30dp"
      android:layout_marginEnd="30dp"
      android:background="@drawable/edittext_background"
      android:fontFamily="@font/poppins"
      android:hint="@string/txtUserName"
      android:inputType="text"
      android:paddingStart="18dp"
      android:paddingEnd="18dp"
      android:textColor="@color/text_primary"
      android:textColorHint="@color/text_hint"
      android:textSize="14sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/lblDescReg" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edittext_background"
        android:fontFamily="@font/poppins"
        android:hint="@string/txtPassword"
        android:inputType="textPassword"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_hint"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUserName" />

  <Button
      android:id="@+id/btnRegistrarse"
      android:layout_width="0dp"
      android:layout_height="55dp"
      android:layout_marginStart="30dp"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="30dp"
      android:backgroundTint="@color/secondary"
      android:fontFamily="@font/poppins"
      android:text="@string/btnLogin"
      android:textColorLink="@color/primary"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

  <TextView
      android:id="@+id/lblOr"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="70dp"
      android:layout_marginTop="15dp"
      android:layout_marginEnd="70dp"
      android:text="@string/lblOr"
      android:textAlignment="center"
      android:textColor="@color/primary"
      android:textSize="14sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btnRegistrarse" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/btnGoogle"
      android:layout_width="0dp"
      android:layout_height="55dp"
      android:layout_marginStart="30dp"
      android:layout_marginTop="15dp"
      android:layout_marginEnd="30dp"
      android:text="@string/btnGoogle"
      android:textColor="@color/text_primary"
      app:backgroundTint="@color/white"
      app:icon="@drawable/g_icon"
      app:iconGravity="textStart"
      app:iconSize="18dp"
      app:iconTint="@null"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/lblOr"
      app:strokeColor="@color/google_stroke"
      app:strokeWidth="1dp" />

  <ImageView
      android:id="@+id/imgHeader"
      android:layout_width="386dp"
      android:layout_height="322dp"
      android:layout_marginStart="30dp"
      android:layout_marginTop="30dp"
      android:layout_marginEnd="30dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/header_auth" />

  <TextView
      android:id="@+id/txtRegister"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:layout_marginTop="30dp"
      android:text="@string/txtRegLog"
      android:textColor="#3D5882"
      android:textSize="14sp"
      android:fontFamily="@font/poppins_semibold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btnGoogle" />

</androidx.constraintlayout.widget.ConstraintLayout>